--- a/package.json
+++ b/package.json
@@ -6,23 +6,26 @@
     "node": ">= 22.11 < 23"
   },
   "devDependencies": {
+    "@dotenvx/dotenvx": "^1.51.0",
     "@eslint/js": "~9.17",
     "@types/eslint__js": "~8.42",
     "@types/node": "~20",
     "@typescript-eslint/parser": "~8.19",
     "@vitest/coverage-v8": "~2.1",
     "@vitest/eslint-plugin": "~1.1",
-    "eslint-config-prettier": "~9.1",
     "eslint": "~9.17",
+    "eslint-config-prettier": "~9.1",
     "globals": "~15.14",
     "prettier": "~3.4",
     "rimraf": "~6.0",
     "ts-api-utils": "~2.0",
-    "typescript-eslint": "~8.19",
     "typescript": "~5.7",
+    "typescript-eslint": "~8.19",
+    "vite-node": "^3.2.4",
     "vitest": "~2.1"
   },
   "scripts": {
+    "dev": "pnpm dotenvx vite-node --watch src/main.ts",
     "start": "node build/src/main.js",
     "clean": "rimraf coverage build tmp",
     "prebuild": "npm run lint",
@@ -34,11 +37,15 @@
     "test:coverage": "vitest run unit --config __tests__/vitest.config.ts --coverage.enabled --coverage.all",
     "prettier": "prettier \"{src,__{tests}__}/**/*.{ts,mts}\" --config .prettierrc --write",
     "prettier:check": "prettier \"{src,__{tests}__}/**/*.{ts,mts}\" --config .prettierrc --check",
-    "test:watch": "vitest unit"
+    "test:watch": "vitest unit",
+    "dotenvx": "./scripts/dotenvx.sh"
   },
   "license": "MIT",
   "packageManager": "pnpm@10.11.1",
   "dependencies": {
+    "@azure/identity": "^4.12.0",
+    "@azure/keyvault-keys": "^4.10.0",
+    "@azure/keyvault-secrets": "^4.10.0",
     "tslib": "~2.8"
   }
 }
