--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 NODE_TLS_REJECT_UNAUTHORIZED=0
 AZURE_POD_IDENTITY_AUTHORITY_HOST="http://localhost:3080"
+AZURE_KEY_VAULT_HOST="https://localhost:3443"
