--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@azure/identity": "^4.12.0",
     "@azure/keyvault-keys": "^4.10.0",
     "@azure/keyvault-secrets": "^4.10.0",
-    "tslib": "~2.8"
+    "@t3-oss/env-core": "^0.13.8",
+    "tslib": "~2.8",
+    "zod": "^4.1.11"
   }
 }
