--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,6 +24,12 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Start services with Docker Compose
+        # This command starts all services defined in your docker-compose.yml
+        # in the background (-d). The '--wait' flag tells Compose to wait
+        # until the containers report a "healthy" status.
+        run: docker compose up -d --wait
+
       - name: Run linter
         run: pnpm lint
 
@@ -31,7 +37,17 @@ jobs:
         run: pnpm prettier:check
 
       - name: Run tests
+        # Your tests can now connect to the services started via Docker Compose
+        env:
+          ENVIRONMENT: test
         run: pnpm test
 
       - name: Build project
         run: pnpm build
+
+      - name: Stop services
+        # This step runs even if previous steps fail, ensuring
+        # that the Docker Compose services are always stopped.
+        if: always()
+        run: docker compose down
+
