--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,38 @@
-# Logs
-logs
-*.log
-npm-debug.log*
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # Dependencies
-node_modules/
+node_modules
+.pnp
+.pnp.js
 
-# Coverage
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Testing
 coverage
 
-# Transpiled files
-build/
+# Turbo
+.turbo
 
-# JetBrains IDEs
-.idea/
+# Vercel
+.vercel
 
-# Optional npm cache directory
-.npm
+# Build Outputs
+.next/
+out/
+build
+dist
 
-# Optional eslint cache
-.eslintcache
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Misc
 .DS_Store
+*.pem
