--- a/apps/nestjs/.swcrc
+++ b/apps/nestjs/.swcrc
@@ -1,5 +1,14 @@
 {
   "$schema": "https://swc.rs/schema.json",
+  "jsc": {
+    "parser": {
+      "syntax": "typescript",
+      "decorators": true
+    },
+    "transform": {
+      "decoratorMetadata": true
+    }
+  },
   "module": {
     "type": "es6",
     "resolveFully": true
