--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -12,30 +12,30 @@
     "start": "nest start",
     "start:dev": "pnpm dotenvx nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "pnpm dotenvx node dist/main.cjs",
     "lint": "eslint .",
     "test": "vitest run --exclude **/e2e/**/*.ts",
     "test:e2e": "vitest run --config ./test/vitest.e2e.ts",
     "check-types": "tsc --noEmit",
-    "dotenvx": "../scripts/dotenvx.sh"
+    "dotenvx": "../../scripts/dotenvx.sh"
   },
   "dependencies": {
+    "@azure/identity": "^4.12.0",
+    "@azure/keyvault-keys": "^4.10.0",
+    "@azure/keyvault-secrets": "^4.10.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "@repo/enums": "workspace:*",
+    "@repo/utils": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "@azure/identity": "^4.12.0",
-    "@azure/keyvault-keys": "^4.10.0",
-    "@azure/keyvault-secrets": "^4.10.0",
-    "zod": "^4.1.11",
-    "@repo/enums": "workspace:*",
-    "@repo/utils": "workspace:*"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.51.0",
@@ -53,12 +53,15 @@
     "globals": "^16.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
+    "swc-loader": "^0.2.6",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript": "^5.7.3",
     "unplugin-swc": "^1.5.7",
     "vite": "5.4.20",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "webpack-merge": "^6.0.1"
   }
 }
