--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "pnpm dotenvx nest start",
     "start:dev": "pnpm dotenvx nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:debug": "pnpm dotenvx nest start --debug --watch",
     "start:prod": "pnpm dotenvx node dist/main.cjs",
     "lint": "eslint .",
     "test": "vitest run --exclude **/e2e/**/*.ts",
@@ -62,6 +62,7 @@
     "unplugin-swc": "^1.5.7",
     "vite": "5.4.20",
     "vitest": "^3.2.4",
-    "webpack-merge": "^6.0.1"
+    "webpack-merge": "^6.0.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
