--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -5,14 +5,14 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "pnpm dotenvx nest start",
-    "start:dev": "pnpm dotenvx nest start --watch",
-    "start:debug": "pnpm dotenvx nest start --debug --watch",
-    "start:prod": "pnpm dotenvx node dist/main.cjs",
+    "start": "NODE_OPTIONS='--experimental-require-module' pnpm dotenvx nest start",
+    "start:dev": "NODE_OPTIONS='--experimental-require-module' pnpm dotenvx nest start --watch",
+    "start:debug": "NODE_OPTIONS='--experimental-require-module' pnpm dotenvx nest start --debug --watch",
+    "start:prod": "NODE_OPTIONS='--experimental-require-module' pnpm dotenvx node dist/main",
     "lint": "eslint .",
     "test": "vitest run --exclude **/e2e/**/*.ts",
     "test:e2e": "vitest run --config ./test/vitest.e2e.ts",
