feat: webpack sourcemaps

--- a/apps/nestjs/.env.development
+++ b/apps/nestjs/.env.development
@@ -1,3 +1,5 @@
 NODE_TLS_REJECT_UNAUTHORIZED=0
 AZURE_POD_IDENTITY_AUTHORITY_HOST="http://localhost:3080"
 AZURE_KEY_VAULT_HOST="https://localhost:3443"
+
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
