--- a/apps/nestjs/.env.development
+++ b/apps/nestjs/.env.development
@@ -2,4 +2,9 @@ NODE_TLS_REJECT_UNAUTHORIZED=0
 AZURE_POD_IDENTITY_AUTHORITY_HOST="http://localhost:3080"
 AZURE_KEY_VAULT_HOST="https://localhost:3443"
 
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
+
+GITHUB_CLIENT_ID="your_github_client_id"
+GITHUB_CLIENT_SECRET="your_github_client_secret"
+
+JWT_SECRET="super-secret"
