--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -26,6 +26,8 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@repo/enums": "workspace:*",
@@ -34,6 +36,9 @@
     "@t3-oss/env-core": "^0.13.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^4.1.11"
@@ -50,6 +55,8 @@
     "@swc/core": "^1.13.5",
     "@types/express": "^5.0.0",
     "@types/node": "^20.19.17",
+    "@types/passport-github2": "^1.2.9",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "globals": "^16.0.0",
     "source-map-support": "^0.5.21",
