--- a/apps/nestjs/.env.development
+++ b/apps/nestjs/.env.development
@@ -4,7 +4,7 @@ AZURE_KEY_VAULT_HOST="https://localhost:3443"
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
 
-GITHUB_CLIENT_ID="your_github_client_id"
-GITHUB_CLIENT_SECRET="your_github_client_secret"
+GITHUB_CLIENT_ID="Ov23liDolwHvdusYMtaQ"
+GITHUB_CLIENT_SECRET="e54a9472da1436c22983c945f413fbe910c7bc87"
 
 JWT_SECRET="super-secret"
