--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -37,6 +37,7 @@
     "@types/passport-jwt": "^4.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "deep-pick-omit": "^1.2.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
@@ -68,6 +69,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
+    "type-fest": "^5.0.1",
     "typescript": "^5.7.3",
     "unplugin-swc": "^1.5.7",
     "vite": "5.4.20",
