--- a/apps/nestjs/tsconfig.json
+++ b/apps/nestjs/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "@repo/typescript-config/nest.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src", "test", "**/*spec.ts"],
   "exclude": ["node_modules", "dist"]
