--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "NODE_OPTIONS='--experimental-require-module' pnpm dotenvx nest start",
-    "start:dev": "NODE_OPTIONS='--experimental-require-module' pnpm dotenvx nest start --watch",
+    "dev": "NODE_OPTIONS='--experimental-require-module' pnpm dotenvx nest start --watch",
     "start:debug": "NODE_OPTIONS='--experimental-require-module' pnpm dotenvx nest start --debug --watch",
     "start:prod": "NODE_OPTIONS='--experimental-require-module' pnpm dotenvx node dist/main",
     "lint": "eslint .",
@@ -26,14 +26,22 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@repo/enums": "workspace:*",
     "@repo/prisma": "workspace:*",
     "@repo/utils": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
+    "@types/passport-jwt": "^4.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "deep-pick-omit": "^1.2.1",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^4.1.11"
@@ -50,6 +58,8 @@
     "@swc/core": "^1.13.5",
     "@types/express": "^5.0.0",
     "@types/node": "^20.19.17",
+    "@types/passport-github2": "^1.2.9",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "globals": "^16.0.0",
     "source-map-support": "^0.5.21",
@@ -59,6 +69,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
+    "type-fest": "^5.0.1",
     "typescript": "^5.7.3",
     "unplugin-swc": "^1.5.7",
     "vite": "5.4.20",
