--- a/packages/authenticator/package.json
+++ b/packages/authenticator/package.json
@@ -20,8 +20,10 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@repo/types": "workspace:*",
     "@repo/utils": "workspace:*",
     "cbor": "^10.0.11",
-    "cbor2": "^2.0.1"
+    "cbor2": "^2.0.1",
+    "ts-pattern": "^5.8.0"
   }
 }
