--- a/packages/authenticator/package.json
+++ b/packages/authenticator/package.json
@@ -24,6 +24,7 @@
     "@repo/utils": "workspace:*",
     "cbor": "^10.0.11",
     "cbor2": "^2.0.1",
-    "ts-pattern": "^5.8.0"
+    "ts-pattern": "^5.8.0",
+    "typanion": "^3.14.0"
   }
 }
