--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/types": "workspace:*",
     "@types/node": "^22.5.2",
     "cbor": "^10.0.11",
     "cbor-x": "^1.6.0",
