--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/authenticator",
+  "name": "@repo/virtual-authenticator",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -20,9 +20,11 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@repo/keys": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/utils": "workspace:*",
     "cbor": "^10.0.11",
+    "cbor-x": "^1.6.0",
     "cbor2": "^2.0.1",
     "ts-pattern": "^5.8.0",
     "typanion": "^3.14.0"
