--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -23,7 +23,9 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@repo/utils": "workspace:*",
     "@repo/enums": "workspace:*",
+    "cbor": "^10.0.11",
     "typanion": "^3.14.0"
   }
 }
