--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/main.ts"
+    ".": "./src/index.ts"
   },
   "scripts": {
     "build": "prisma generate",
