--- a/packages/iam-manager/package.json
+++ b/packages/iam-manager/package.json
@@ -17,11 +17,12 @@
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.5.2",
     "typescript": "^5.5.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "vitest-mock-extended": "^3.1.0"
   },
   "dependencies": {
-    "@repo/prisma": "workspace:*",
     "@repo/enums": "workspace:*",
+    "@repo/prisma": "workspace:*",
     "typanion": "^3.14.0"
   }
 }
