--- a/packages/keys/tsconfig.json
+++ b/packages/keys/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@repo/typescript-config/base.json",
-  "include": ["src"],
+  "include": ["src", "__tests__/unit/CoseKey.test.ts"],
   "exclude": ["node_modules"]
 }
