--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,8 @@
     "check-types": {
       "dependsOn": ["^check-types"]
     },
+    "format": {},
+    "format:check": {},
     "start": {
       "cache": false,
       "persistent": true
