--- a/turbo.json
+++ b/turbo.json
@@ -11,12 +11,11 @@
     "lint": {
       "dependsOn": ["^lint"]
     },
-    "test": {
-      "dependsOn": ["^test"]
-    },
     "check-types": {
       "dependsOn": ["^check-types"]
     },
+    "format": {},
+    "format:check": {},
     "start": {
       "cache": false,
       "persistent": true
