--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -8,7 +8,7 @@
     "./enums": "./src/enums/index.ts"
   },
   "scripts": {
-    "test": "vitest run",
+    "test": "vitest run unit --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
