--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -11,7 +11,7 @@
     "./swapKeysAndValues": "./src/swapKeysAndValues.ts"
   },
   "scripts": {
-    "test": "vitest run",
+    "test": "vitest run unit --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
