--- a/packages/enums/package.json
+++ b/packages/enums/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "src/main.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "scripts": {
+    "build": "../../scripts/generate_barrels.ts src",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
