--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@repo/transformers": "workspace:*",
+    "@repo/enums": "workspace:*",
     "@repo/keys": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/utils": "workspace:*",
