--- a/apps/elysia/package.json
+++ b/apps/elysia/package.json
@@ -17,6 +17,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@repo/types": "workspace:*",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-esm-shim": "^0.1.8",
     "@rollup/plugin-json": "^6.1.0",
