--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
     "@types/node": "^24.5.2",
     "@vitest/coverage-istanbul": "^3.2.4",
     "@vitest/ui": "^3.2.4",
+    "ejs": "^3.1.10",
     "prettier": "^3.6.2",
     "tsx": "^4.20.6",
     "turbo": "^2.5.8",
