init better auth package

--- a/packages/better-auth/package.json
+++ b/packages/better-auth/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "@repo/utils",
+  "name": "@repo/better-auth",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "exports": {
-    "./toBuffer": "./src/toBuffer.ts",
-    "./sha256": "./src/sha256.ts",
-    "./objectKeys": "./src/objectKeys.ts",
-    "./swapKeysAndValues": "./src/swapKeysAndValues.ts"
+    ".": "./src/index.ts"
   },
   "scripts": {
     "test": "vitest run unit --config __tests__/vitest.config.ts",
