--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -17,7 +17,8 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "ts-pattern": "^5.8.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
