--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -2,7 +2,6 @@
   "name": "@repo/console",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
@@ -15,10 +14,13 @@
     "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.65.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
     "ts-pattern": "^5.8.0"
   },
