--- a/apps/console/Dockerfile
+++ b/apps/console/Dockerfile
@@ -1,57 +1,63 @@
+FROM node:22-alpine AS base
 
-# Base image
-FROM node:18-alpine AS base
+ENV NODE_ENV=production
+
 WORKDIR /app
 
-# Install pnpm
-RUN npm install -g pnpm
+# =========================================================================== #
 
-# -------------------------------------------------------------------------------------------------
-# Prune the monorepo
-FROM base AS pruner
-WORKDIR /app
+FROM base AS builder-base
 
-# Copy root package.json and pnpm-lock.yaml
-COPY package.json pnpm-lock.yaml ./
+ENV TURBO_TELEMETRY_DISABLED=1
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
+ENV CI=1
 
-# Copy project files
+RUN corepack enable pnpm
+
+# =========================================================================== #
+
+FROM builder-base AS builder
+
+RUN pnpm install --global turbo
+
 COPY . .
-RUN turbo prune --scope=console --docker
 
-# -------------------------------------------------------------------------------------------------
-# Builder image
-FROM base AS builder
-WORKDIR /app
+# https://turbo.build/repo/docs/guides/tools/docker#the-solution
+RUN turbo prune @repo/console --docker
 
-# Copy pruned files
-COPY --from=pruner /app/out/json/ .
-COPY --from=pruner /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
+# =========================================================================== #
 
-# Install dependencies
-RUN pnpm install --frozen-lockfile
+FROM builder-base AS installer
 
-# Copy source code
-COPY --from=pruner /app/out/full/ .
-COPY turbo.json turbo.json
+COPY --from=builder /app/out/json/ .
+RUN pnpm install --frozen-lockfile --prod=false
 
-# Build the app
-RUN pnpm turbo run build --filter=console...
+COPY --from=builder /app/out/full/ .
+RUN pnpm --filter="@repo/console" build
 
-# -------------------------------------------------------------------------------------------------
-# Runner image
-FROM base AS runner
-WORKDIR /app
+# =========================================================================== #
 
-# Copy build output
-COPY --from=builder /app/apps/console/.next/standalone ./
-COPY --from=builder /app/apps/console/public ./apps/console/public
-COPY --from=builder /app/apps/console/.next/static ./apps/console/.next/static
+FROM base AS production
 
-# Set the correct user
-USER nextjs
+RUN addgroup --system --gid 1001 nodejs \
+    && adduser --system --uid 1001 console
 
-# Expose the port
+COPY --from=installer /app/apps/console/public ./public
+
+# Automatically leverage output traces to reduce image size
+# https://nextjs.org/docs/advanced-features/output-file-tracing
+COPY --from=installer --chown=console:nodejs /app/apps/console/.next/standalone ./
+COPY --from=installer --chown=console:nodejs /app/apps/console/.next/static ./.next/static
+
+USER console
+
 EXPOSE 3000
 
-# Start the app
-CMD ["node", "apps/console/server.js"]
+ENV PORT=3000
+
+# server.js is created by next build from the standalone output
+# https://nextjs.org/docs/pages/api-reference/config/next-config-js/output
+ENV HOSTNAME="0.0.0.0"
+
+CMD ["node", "server.js"]
