--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@repo/better-auth": "workspace:*",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
