--- a/apps/plasmo/tsconfig.json
+++ b/apps/plasmo/tsconfig.json
@@ -1,19 +1,10 @@
 {
-  "extends": "plasmo/templates/tsconfig.base",
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    ".plasmo/index.d.ts",
-    "./**/*.ts",
-    "./**/*.tsx"
-  ],
+  "extends": "@repo/typescript-config/plasmo.json",
+  "exclude": ["node_modules"],
+  "include": [".plasmo/index.d.ts", "./**/*.ts", "./**/*.tsx"],
   "compilerOptions": {
     "paths": {
-      "~*": [
-        "./*"
-      ]
-    },
-    "baseUrl": "."
+      "~*": ["./*"]
+    }
   }
 }
