--- a/packages/openapi/tsconfig.json
+++ b/packages/openapi/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@repo/typescript-config/base.json",
-  "include": ["src", "zod-openapi.d.ts"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
