remove enum template

--- a/packages/openapi/package.json
+++ b/packages/openapi/package.json
@@ -8,14 +8,16 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "build": "scripts/generate_openapi_schema.ts"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.5.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "yaml": "^2.8.1"
   },
   "dependencies": {
     "@repo/validation": "workspace:*",
