--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
+    "@repo/openapi": "workspace:*",
     "@repo/enums": "workspace:*",
     "@repo/prisma": "workspace:*",
+    "@scalar/hono-api-reference": "^0.9.22",
     "hono": "^4.9.10"
   },
   "devDependencies": {
@@ -21,7 +23,9 @@
     "@rollup/plugin-swc": "^0.4.0",
     "@swc/core": "^1.13.5",
     "@types/node": "^20.11.17",
+    "@repo/typescript-config": "workspace:*",
     "rollup": "^4.52.4",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-delete": "^3.0.1",
     "rollup-plugin-node-externals": "^8.1.1",
     "rollup-plugin-tsconfig-paths": "^1.5.2",
