--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@hono/node-server": "^1.19.5",
     "@repo/enums": "workspace:*",
+    "@repo/openapi": "workspace:*",
     "@repo/prisma": "workspace:*",
     "hono": "^4.9.10"
   },
   "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-esm-shim": "^0.1.8",
     "@rollup/plugin-json": "^6.1.0",
@@ -22,8 +24,10 @@
     "@swc/core": "^1.13.5",
     "@types/node": "^20.11.17",
     "rollup": "^4.52.4",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-delete": "^3.0.1",
     "rollup-plugin-node-externals": "^8.1.1",
+    "rollup-plugin-shell": "^1.0.9",
     "rollup-plugin-tsconfig-paths": "^1.5.2",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
