--- a/packages/enums/package.json
+++ b/packages/enums/package.json
@@ -15,6 +15,10 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.5.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "zod-openapi": "^5.4.3"
+  },
+  "dependencies": {
+    "zod": "^4.1.12"
   }
 }
