--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -8,12 +8,16 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
+    "@hono/zod-validator": "^0.7.4",
     "@repo/enums": "workspace:*",
     "@repo/openapi": "workspace:*",
     "@repo/prisma": "workspace:*",
-    "hono": "^4.9.10"
+    "@repo/validation": "workspace:*",
+    "hono": "^4.9.10",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-esm-shim": "^0.1.8",
